fix: added homebtn support + thread-safe getInstance() in LocalQuranQueryService